--- a/tax_revenue_analysis.Rmd
+++ b/tax_revenue_analysis.Rmd
@@ -13,6 +13,13 @@ always_allow_html: true
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
+
+# Load all required packages upfront
+if (!require("tidyverse")) install.packages("tidyverse")
+if (!require("knitr")) install.packages("knitr")
+if (!require("scales")) install.packages("scales")
+if (!require("ggplot2")) install.packages("ggplot2")
+
 library(tidyverse)
 library(knitr)
 library(scales)
@@ -246,7 +253,7 @@ kable(scenario_summary %>%
 # Create improved scenario visualization
 scenario_plot <- scenario_results %>%
   group_by(scenario_name, property_type) %>%
-  summarize(tax_revenue = sum(tax_revenue)) %>%
+  summarize(tax_revenue = sum(tax_revenue), .groups = 'drop') %>%
   ggplot(aes(x = scenario_name, 
              y = tax_revenue/1e6, 
              fill = property_type)) +
@@ -279,38 +286,171 @@ scenario_plot <- scenario_results %>%
 scenario_plot
 ```
 
-## Key Findings
+## Case Study: Lake View Township Development Potential
 
-1. **Revenue Potential**: Based on our analysis of different development scenarios:
-   - The Balanced Growth scenario generates `r format_currency(scenario_summary$total_revenue[1])` annually from `r scenario_summary$total_units[1]` units
-   - The TOD scenario generates `r format_currency(scenario_summary$total_revenue[2])` annually from `r scenario_summary$total_units[2]` units
-   - The Affordable Housing scenario generates `r format_currency(scenario_summary$total_revenue[3])` annually from `r scenario_summary$total_units[3]` units
+To better understand the specific impact of new housing development in different areas, let's examine Lake View township as a detailed case study.
 
-2. **Property Type Impact**: 
-   - Single-family homes generate the highest per-unit tax revenue (`r format_currency(current_summary$avg_tax_per_unit[3])` per unit)
-   - Multi-family properties offer efficiency in land use while maintaining substantial tax revenue
-   - Condos provide a middle ground between density and tax revenue
+```{r lakeview_current}
+# Filter data for Lake View township and calculate effective tax rate
+lakeview_data <- township_data %>%
+  filter(year == 2022, township == "LAKE VIEW") %>%
+  arrange(desc(avg_tax_per_unit)) %>%
+  # Calculate effective tax rate
+  mutate(effective_tax_rate = (avg_tax_per_unit / avg_value_per_unit) * 100)
 
-3. **Geographic Considerations**:
-   - Tax revenue varies significantly by township
-   - Lake and South Chicago townships show the highest average tax per unit
-   - Strategic development in high-value areas could maximize revenue
+# Create summary table for Lake View
+kable(lakeview_data %>%
+  select(year, township, property_type, avg_tax_per_unit, avg_value_per_unit, effective_tax_rate) %>%
+  mutate(
+    avg_tax_per_unit = format_currency(avg_tax_per_unit),
+    avg_value_per_unit = format_currency(avg_value_per_unit),
+    effective_tax_rate = format_percent(effective_tax_rate)
+  ),
+  col.names = c("Year", "Township", "Property Type", "Avg Tax/Unit", "Avg Value/Unit", "Effective Tax Rate"),
+  caption = "Current Property Tax Metrics in Lake View Township (2022)")
 
-## Recommendations
+# Calculate township-specific metrics using raw numbers before formatting
+lakeview_metrics <- lakeview_data %>%
+  summarize(
+    avg_tax_all_types = mean(avg_tax_per_unit),
+    max_tax = max(avg_tax_per_unit),
+    min_tax = min(avg_tax_per_unit)
+  )
+```
 
-1. **Balanced Development**: While single-family homes generate the highest per-unit revenue, a mix of housing types provides the best balance of revenue and density.
+### Lake View Development Scenarios
 
-2. **Location Strategy**: Focus development in areas with strong tax revenue potential while ensuring equitable distribution of new housing.
+Based on Lake View's current property tax patterns and development characteristics, we'll model three targeted scenarios:
 
-3. **Unit Mix**: Prioritize a diverse mix of unit types to:
-   - Meet various housing needs
-   - Maximize tax revenue
-   - Maintain neighborhood character
+```{r lakeview_scenarios}
+# Define Lake View specific scenarios
+lakeview_scenarios <- tribble(
+  ~scenario_name, ~property_type, ~bedroom_type, ~units,
+  # High-Density Transit Corridor
+  "Transit Corridor", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 1500,
+  "Transit Corridor", "Condo", "beds_1", 800,
+  "Transit Corridor", "Condo", "beds_2", 500,
+  "Transit Corridor", "Small Multi-Family (2-6 units)", "mixed_1_to_3", 200,
+  
+  # Mixed-Income Development
+  "Mixed-Income", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 1000,
+  "Mixed-Income", "Small Multi-Family (2-6 units)", "mixed_1_to_3", 500,
+  "Mixed-Income", "Condo", "beds_1", 400,
+  "Mixed-Income", "Condo", "beds_2", 300,
+  
+  # Neighborhood Infill
+  "Neighborhood Infill", "Small Multi-Family (2-6 units)", "mixed_1_to_3", 800,
+  "Neighborhood Infill", "Condo", "beds_2", 400,
+  "Neighborhood Infill", "Large Multi-Family (7+ units)", "mixed_studio_to_3", 300,
+  "Neighborhood Infill", "Condo", "beds_1", 200
+)
 
-4. **Implementation Approach**:
-   - Phase development based on market demand
-   - Coordinate with infrastructure improvements
-   - Consider impact on existing communities
+# Calculate revenue for Lake View scenarios
+lakeview_results <- lakeview_scenarios %>%
+  left_join(tax_rates, by = c("property_type", "bedroom_type")) %>%
+  mutate(tax_revenue = units * avg_tax_per_unit)
+
+# Summarize Lake View scenario results
+lakeview_summary <- lakeview_results %>%
+  group_by(scenario_name) %>%
+  summarize(
+    total_units = sum(units),
+    total_revenue = sum(tax_revenue),
+    revenue_per_unit = total_revenue / total_units,
+    .groups = 'drop'
+  )
+
+# Display Lake View summary table
+kable(lakeview_summary %>%
+  mutate(
+    total_units = format_number(total_units),
+    total_revenue = format_currency(total_revenue),
+    revenue_per_unit = format_currency(revenue_per_unit)
+  ),
+  col.names = c("Scenario", "Total Units", "Annual Tax Revenue", "Revenue per Unit"),
+  caption = "Projected Annual Tax Revenue by Development Scenario in Lake View")
+
+# Create visualization for Lake View scenarios
+lakeview_plot <- lakeview_results %>%
+  group_by(scenario_name, property_type) %>%
+  summarize(tax_revenue = sum(tax_revenue), .groups = 'drop') %>%
+  ggplot(aes(x = scenario_name, 
+             y = tax_revenue/1e6, 
+             fill = property_type)) +
+  geom_bar(stat = "identity", position = "stack") +
+  geom_text(aes(label = scales::dollar(tax_revenue/1e6, accuracy = 0.1, suffix = "M")),
+            position = position_stack(vjust = 0.5),
+            color = "white",
+            size = 3) +
+  scale_y_continuous(labels = scales::dollar_format(suffix = "M"),
+                    expand = expansion(mult = c(0, 0.1))) +
+  scale_fill_manual(values = modern_palette) +
+  labs(
+    title = "Projected Annual Tax Revenue by Development Scenario in Lake View",
+    subtitle = "Broken down by property type, with revenue amounts shown in millions",
+    x = "Development Scenario",
+    y = "Tax Revenue (Millions)",
+    fill = "Property Type"
+  ) +
+  theme_minimal() +
+  theme(
+    plot.title = element_text(face = "bold", size = 14),
+    plot.subtitle = element_text(size = 10, color = "gray50"),
+    axis.title = element_text(face = "bold"),
+    axis.text.x = element_text(angle = 45, hjust = 1),
+    legend.position = "bottom",
+    legend.box = "horizontal",
+    panel.grid.major.x = element_blank()
+  )
+
+lakeview_plot
+```
+
+### Lake View Scenario Details
+
+1. **Transit Corridor Development** (3,000 total units)
+   - Focuses on high-density development along major transit routes
+   - Emphasizes larger multi-family buildings (1,500 units) near transit stops
+   - Includes a mix of 1-bed (800 units) and 2-bed (500 units) condos
+   - Limited small multi-family (200 units) as buffer zones
+   - Projected annual revenue: `r format_currency(lakeview_summary$total_revenue[1])`
+
+2. **Mixed-Income Development** (2,200 total units)
+   - Balanced approach with diverse housing types
+   - Large multi-family component (1,000 units) for affordable options
+   - Mix of small multi-family (500 units) throughout
+   - Even distribution of 1-bed (400 units) and 2-bed (300 units) condos
+   - Projected annual revenue: `r format_currency(lakeview_summary$total_revenue[2])`
+
+3. **Neighborhood Infill** (1,700 total units)
+   - Emphasizes smaller-scale development compatible with existing neighborhoods
+   - Focus on small multi-family buildings (800 units)
+   - More 2-bed (400 units) than 1-bed (200 units) condos
+   - Limited large multi-family (300 units) at strategic locations
+   - Projected annual revenue: `r format_currency(lakeview_summary$total_revenue[3])`
+
+### Lake View Development Insights
+
+1. **Revenue Generation**:
+   - Transit Corridor scenario generates the highest total revenue at `r format_currency(lakeview_summary$total_revenue[1])` annually
+   - Mixed-Income approach provides balanced revenue of `r format_currency(lakeview_summary$total_revenue[2])` annually
+   - Neighborhood Infill generates `r format_currency(lakeview_summary$total_revenue[3])` while maintaining neighborhood character
+
+2. **Unit Mix Considerations**:
+   - Large multi-family developments contribute significantly to total revenue
+   - Condo units provide strong per-unit revenue
+   - Small multi-family buildings offer good revenue while preserving neighborhood scale
+
+3. **Location Strategy**:
+   - Focus high-density development along major transit corridors
+   - Distribute small multi-family units throughout neighborhoods
+   - Strategic placement of larger developments near existing amenities
+
+4. **Implementation Recommendations**:
+   - Phase development starting with transit-adjacent parcels
+   - Coordinate with CTA on transit-oriented development
+   - Implement design guidelines to ensure compatibility with existing buildings
+   - Consider TIF districts for infrastructure improvements
 
 ## Methodology Notes
 
